// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component:Product snapshots only shows the first five items 1`] = `
<section
  className="o-expandable aggregation"
>
  <div
    className="o-expandable_header o-expandable_target"
  >
    <h4
      className="o-expandable_header-left o-expandable_label"
    >
      Product / sub-product
    </h4>
    <span
      className="o-expandable_header-right o-expandable_link"
    >
      <button
        aria-label="Hide Product / sub-product filter"
        className="a-btn a-btn__link o-expandable_cue o-expandable_cue-close"
        onClick={[Function]}
      >
        Hide
        <svg
          className="cf-icon-svg"
          viewBox="0 0 1000 1200"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
          />
        </svg>
      </button>
    </span>
  </div>
  <p>
    The type of product and sub-product the consumer identified in the complaint
  </p>
  <p>
    <a
      className="a-btn__link"
      href="http://files.consumerfinance.gov/f/documents/201704_cfpb_Summary_of_Product_and_Sub-product_Changes.pdf"
      target="_blank"
    >
      Recent changes to products and sub-products
    </a>
  </p>
  <div>
    <ul>
      <div
        className="aggregation-branch"
      >
        <li
          className="parent m-form-field m-form-field__checkbox body-copy"
        >
          <input
            aria-label="Credit reporting, credit repair services, or other personal consumer reports"
            checked={false}
            className="flex-fixed a-checkbox"
            id="productCreditreporting, credit repair services, or other personal consumer reports"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="toggle a-label"
            htmlFor="productCreditreporting, credit repair services, or other personal consumer reports"
          >
            <button
              className="flex-all a-btn a-btn__link"
              onClick={[Function]}
            >
              <span>
                Credit reporting, credit repair services, or other personal consumer reports
              </span>
              <svg
                className="cf-icon-svg"
                viewBox="0 0 988.2 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M494.1 967.2c-17.3 0-33.8-6.8-46-19L18.6 518.6c-25.1-25.6-24.8-66.8.8-91.9 25.3-24.8 65.8-24.8 91.1 0l383.6 383.6 383.6-383.6c25.6-25.1 66.8-24.8 91.9.8 24.8 25.3 24.8 65.8 0 91.1L540.1 948.1c-12.2 12.2-28.7 19.1-46 19.1z"
                />
              </svg>
            </button>
          </label>
          <span
            className="flex-fixed parent-count"
          >
            <span>
              3,277
            </span>
          </span>
        </li>
      </div>
      <div
        className="aggregation-branch"
      >
        <li
          className="parent m-form-field m-form-field__checkbox body-copy"
        >
          <input
            aria-label="Mortgage"
            checked={false}
            className="flex-fixed a-checkbox"
            id="productMortgage"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="toggle a-label"
            htmlFor="productMortgage"
          >
            <button
              className="flex-all a-btn a-btn__link"
              onClick={[Function]}
            >
              <span>
                Mortgage
              </span>
              <svg
                className="cf-icon-svg"
                viewBox="0 0 988.2 1200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M494.1 967.2c-17.3 0-33.8-6.8-46-19L18.6 518.6c-25.1-25.6-24.8-66.8.8-91.9 25.3-24.8 65.8-24.8 91.1 0l383.6 383.6 383.6-383.6c25.6-25.1 66.8-24.8 91.9.8 24.8 25.3 24.8 65.8 0 91.1L540.1 948.1c-12.2 12.2-28.7 19.1-46 19.1z"
                />
              </svg>
            </button>
          </label>
          <span
            className="flex-fixed parent-count"
          >
            <span>
              2,299
            </span>
          </span>
        </li>
      </div>
      <li
        className="layout-row m-form-field m-form-field__checkbox"
      >
        <input
          aria-label="Credit reporting"
          checked={false}
          className="flex-fixed a-checkbox"
          id="productCreditreporting"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="a-label flex-all bucket-key body-copy"
          htmlFor="productCreditreporting"
        >
          Credit reporting
        </label>
        <span
          className="flex-fixed bucket-count"
        >
          <span>
            1,052
          </span>
        </span>
      </li>
      <li
        className="layout-row m-form-field m-form-field__checkbox"
      >
        <input
          aria-label="Student loan"
          checked={false}
          className="flex-fixed a-checkbox"
          id="productStudentloan"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="a-label flex-all bucket-key body-copy"
          htmlFor="productStudentloan"
        >
          Student loan
        </label>
        <span
          className="flex-fixed bucket-count"
        >
          <span>
            959
          </span>
        </span>
      </li>
      <li
        className="layout-row m-form-field m-form-field__checkbox"
      >
        <input
          aria-label="Credit card or prepaid card"
          checked={false}
          className="flex-fixed a-checkbox"
          id="productCreditcard or prepaid card"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="a-label flex-all bucket-key body-copy"
          htmlFor="productCreditcard or prepaid card"
        >
          Credit card or prepaid card
        </label>
        <span
          className="flex-fixed bucket-count"
        >
          <span>
            836
          </span>
        </span>
      </li>
    </ul>
    <div>
      <button
        className="a-btn a-btn__link more"
        onClick={[Function]}
      >
        + Show 
        1
         
        more
      </button>
    </div>
  </div>
</section>
`;

exports[`component:Product snapshots renders without crashing 1`] = `
<section
  className="o-expandable aggregation"
>
  <div
    className="o-expandable_header o-expandable_target"
  >
    <h4
      className="o-expandable_header-left o-expandable_label"
    >
      Product / sub-product
    </h4>
    <span
      className="o-expandable_header-right o-expandable_link"
    >
      <button
        aria-label="Hide Product / sub-product filter"
        className="a-btn a-btn__link o-expandable_cue o-expandable_cue-close"
        onClick={[Function]}
      >
        Hide
        <svg
          className="cf-icon-svg"
          viewBox="0 0 1000 1200"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
          />
        </svg>
      </button>
    </span>
  </div>
  <p>
    The type of product and sub-product the consumer identified in the complaint
  </p>
  <p>
    <a
      className="a-btn__link"
      href="http://files.consumerfinance.gov/f/documents/201704_cfpb_Summary_of_Product_and_Sub-product_Changes.pdf"
      target="_blank"
    >
      Recent changes to products and sub-products
    </a>
  </p>
  <div>
    <ul />
  </div>
</section>
`;
